--- a/src/main/resources/api.yml
+++ b/src/main/resources/api.yml
@@ -24,11 +24,30 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Account"
+                $ref: "#/components/schemas/BaseResponse"
         "400":
           description: Invalid data or business rules not met.
-        "409":
-          description: Account restriction already exists.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BaseResponse"
+    get:
+      summary: Get all accounts
+      description: Returns all bank accounts in the system
+      operationId: findAllAccounts
+      responses:
+        "200":
+          description: List of accounts found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AccountListResponse"
+        "404":
+          description: No accounts found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BaseResponse"
   /{accountId}:
     get:
       summary: Get bank account details
@@ -46,9 +65,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Account"
+                $ref: "#/components/schemas/BaseResponse"
         "404":
           description: Account not found.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BaseResponse"
     put:
       summary: Update a bank account
       description: Updates details of an existing bank account.
@@ -71,9 +94,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Account"
-        "404":
-          description: Account not found.
+                $ref: "#/components/schemas/BaseResponse"
+        "400":
+          description: Invalid data provided.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BaseResponse"
     delete:
       summary: Delete a bank account
       description: Deletes an existing bank account.
@@ -85,10 +112,18 @@ paths:
           schema:
             type: string
       responses:
-        "204":
+        "200":
           description: Account successfully deleted.
-        "404":
-          description: Account not found.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BaseResponse"
+        "400":
+          description: Error deleting account.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BaseResponse"
   /customer/{customerId}:
     get:
       summary: Get all accounts of a customer
@@ -106,11 +141,47 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Account"
+                $ref: "#/components/schemas/AccountListResponse"
         "404":
           description: No accounts found for the customer.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BaseResponse"
+  /{accountId}/vip-pym/status:
+    put:
+      summary: Update VIP or PYM status of an account
+      description: Updates the VIP or PYM status of an existing account
+      operationId: updateVipPymStatus
+      parameters:
+        - name: accountId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: isVipPym
+          in: query
+          required: true
+          schema:
+            type: boolean
+        - name: type
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Account status successfully updated.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BaseResponse"
+        "404":
+          description: Account not found.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BaseResponse"
 components:
   schemas:
     Account:
@@ -120,32 +191,81 @@ components:
         - accountType
         - balance
       properties:
+        id:
+          type: string
+          description: Unique identifier for the account
         customerId:
           type: string
-          description: ID of the customer who owns the account.
+          description: ID of the customer who owns the account
         accountType:
           type: string
           enum: [SAVINGS, CHECKING, FIXED_TERM]
-          description: Type of bank account.
+          description: Type of bank account
         balance:
           type: number
           format: double
-          description: Initial account balance.
+          description: Current account balance
+        isVipAccount:
+          type: boolean
+          description: Indicates if the account is VIP (only for SAVINGS accounts)
+        minBalanceRequirement:
+          type: number
+          description: Minimum balance requirement (only if the account is VIP)
+        isPymAccount:
+          type: boolean
+          description: Indicates if the account is PYM (only for CHECKING accounts)
+        maintenanFee:
+          type: number
+          description: Maintenance fee (is 0 only if the account is PYM)
         holders:
           type: array
-          description: Account holders (only for business accounts).
+          description: Account holders
           items:
             type: string
         signers:
           type: array
-          description: Authorized signers (only for business accounts).
+          description: Authorized signers
           items:
             type: string
-        createdAt:
+        createdAd:
           type: string
           format: date-time
-          description: Date and time when the account was registered
-        modifyAd:
+          description: Date and time when the account was created
+        modifiedAd:
           type: string
           format: date-time
-          description: Date and time when the account was modified
+          description: Date and time when the account was last modified
+        maxFreeTransaction:
+          type: integer
+          description: Maximum number of free transactions allowed
+        transactionCost:
+          type: number
+          description: Cost per transaction after exceeding free transactions
+    BaseResponse:
+      type: object
+      properties:
+        status:
+          type: integer
+          description: HTTP status code
+        message:
+          type: string
+          description: Response message
+        data:
+          oneOf:
+            - $ref: "#/components/schemas/Account"
+            - type: "null"
+          description: Response data
+    AccountListResponse:
+      type: object
+      properties:
+        status:
+          type: integer
+          description: HTTP status code
+        message:
+          type: string
+          description: Response message
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/Account"
+          description: List of accounts
