--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,21 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-spring-boot2</artifactId>
+			<version>1.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-reactor</artifactId>
+			<version>1.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-circuitbreaker</artifactId>
+			<version>1.7.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
@@ -237,6 +252,7 @@
 						<exclude>org/openapitools/configuration/**</exclude>
 						<exclude>org/openapitools/**</exclude>
 						<exclude>com/bank/accountservice/api/**</exclude>
+						<exclude>com/bank/accountservice/client/**</exclude>
 						<exclude>com/bank/accountservice/dto/**</exclude>
 						<exclude>com/bank/accountservice/model/**</exclude>
 						<exclude>com/bank/accountservice/config/**</exclude>
